--- a/package.json
+++ b/package.json
@@ -34,5 +34,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+    "babel-jest": "^29.7.0",
+    "enzyme": "^3.11.0",
+    "jest": "^27.5.1",
+    "react-router-dom": "^6.18.0",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.5"
   }
 }
