--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
