--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
