--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
