--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "history": "^5.3.0",
     "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -68,7 +69,7 @@
     "css-loader": "^6.8.1",
     "enzyme": "^3.11.0",
     "jest": "^27.5.1",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.21.1",
     "react-test-renderer": "^18.2.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
