--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "fuse.js": "^7.0.0",
     "history": "^5.3.0",
     "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.6",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
